--- a/p1/src/App.css
+++ b/p1/src/App.css
@@ -5,27 +5,29 @@
 
 .faqsection_main2div{
   border: 1px soild black;
-  height: 80dvh;
-  width: 100dvw;
+  height: 80vh;
   display: flex;
   background-color: rgb(209, 209, 209);
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
 }
+
 .faqsection_maindiv1{
-  font-size: 2vw;
+  font-size:30px;
 }
 
 .faqsection_main2div h1{
   color: #AD343E;
-  font-size: 4vw;
+  font-size: 50px;
+  margin-bottom: 50px;
+  margin-top: 20px;
 }
 
 
 .faqs {
-	width: 100%;
-	max-width: 768px;
+	width: 80%;
+	/* max-width: 808px; */
 	padding: 15px;
 }
 
@@ -63,7 +65,7 @@
 	max-height: 0;
 	overflow-y: hidden;
 	transition: all 0.4s ease-out;
-  font-size: 1.5vw;
+  font-size: 20px;
 }
 
 .faqs .faq.open .faq-question {
@@ -88,7 +90,7 @@
 }
 .disclaimer_maindiv h1{
   color: #AD343E;
-  font-size: 3vw;
+  font-size: 35px;
 }
 .disclaimer_line{
   border: 0.5px solid black;
@@ -96,12 +98,44 @@
 
 }
 .disclaimer_text{
+	text-align: center;
+	color: rgb(81, 81, 81);
   width: 60%;
-  font-size: 1.5vw;
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 .disclaimer_license{
-  font-size: 1.5vw;
-  margin-top: 10px;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+@media only screen and (max-width: 769px){
+	.faqsection_maindiv1{
+		font-size:11.5px;
+	  }
+	.faqsection_main2div{
+		height: 80vh;
+	}
+	.faqs .faq .faq-answer{
+		font-size: 10px;
+	}
+	.faqs{
+		width: 90%;
+	}
+	.faqsection_main2div h1{
+		font-size: 30px;
+		margin-bottom: 20px;
+	}
+	.disclaimer_text{
+		width: 90%;
+		font-size: 10px;
+	}
+	.disclaimer_maindiv h1{
+		font-size: 25px;
+	}
+	.disclaimer_license{
+		font-size: 8px;
+	}
+	
 }
